add funny names for logs dir

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -5363,6 +5363,447 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ac robotics ordering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import difflib\n",
+    "\n",
+    "def read_json_file(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        return json.load(file)\n",
+    "\n",
+    "def json_to_string(json_obj):\n",
+    "    return json.dumps(json_obj, indent=4, sort_keys=True)\n",
+    "\n",
+    "def compare_json_files(file1_path, file2_path):\n",
+    "    # Read JSON files\n",
+    "    json1 = read_json_file(file1_path)\n",
+    "    json2 = read_json_file(file2_path)\n",
+    "\n",
+    "    # Convert JSON objects to strings\n",
+    "    json1_str = json_to_string(json1)\n",
+    "    json2_str = json_to_string(json2)\n",
+    "\n",
+    "    # Split strings into lines for difflib\n",
+    "    json1_lines = json1_str.splitlines()\n",
+    "    json2_lines = json2_str.splitlines()\n",
+    "\n",
+    "    # Compare the lines\n",
+    "    diff = difflib.unified_diff(json1_lines, json2_lines, fromfile=file1_path, tofile=file2_path)\n",
+    "\n",
+    "    # Print the differences\n",
+    "    for line in diff:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_json_files(\n",
+    "    file1_path=\"../data/ac_robotic_2_raw.json\",\n",
+    "    file2_path=\"../data/autopilot_intents.json\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "окей, автопилот интенты не изменились"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "ordering_data = json.load(open(\"../data/ordering_intents.json\"))\n",
+    "# ordering_tags = ordering_data[\"tags\"]\n",
+    "ordering_intents = ordering_data[\"intents\"]\n",
+    "len(ordering_intents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'get_order',\n",
+       " 'phrases': ['(пожалуйста(,){0,1} ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '(пожалуйста(,){0,1} ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '((тебе ((надо)|(следует)|(стоит))|ты (можешь|мог бы|не мог бы)) ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '(сотрудник(,){0,1} ){0,1}(пожалуйста(,){0,1} ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  'было бы хорошо, если бы вы ((выдали)|(оформили)|(подготовили)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '((готов)|(хочу)|(когда можно)|(как)) ((получить)|(забрать)|(оформить)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '((заказ)|(посылка)|(покупка)) на выдачу',\n",
+       "  '((оформить)|(сделать)) выдачу ((заказа)|(посылки)|(покупки))',\n",
+       "  '((забираю)|(получаю)) ((заказ)|(посылку)|(покупку))'],\n",
+       " 'reg_phrases': ['(?i)(?:пожалуйста,?\\\\s*)?(?:сотрудник,?\\\\s*)?(?:(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите)|выд(?:ать|айте))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и)))(?:,?\\\\s*если\\\\s+можно)?',\n",
+       "  '(?i)(?:(?:не\\\\s+)?мог(?:\\\\s+бы)?\\\\s+(?:ли\\\\s+)?(?:я|вы)|(?:я\\\\s+)?(?:не\\\\s+)?мо(?:гу|г(?:ла|ли)\\\\s+бы)|можно\\\\s+(?:ли|мне))\\\\s+(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите)|выд(?:ать|айте))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:мне\\\\s+(?:надо|следует|стоит|нужно)|необходимо|требуется)\\\\s+(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите)|выд(?:ать|айте))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:хорошо\\\\s+бы|было\\\\s+бы\\\\s+(?:неплохо|здорово|хорошо))(?:,?\\\\s*если\\\\s+бы)?\\\\s+(?:вы\\\\s+)?(?:выдали|оформили|подготовили)\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:гото(?:в|ва)|хоч(?:у|ется)|когда\\\\s+можно|как)\\\\s+(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:заказ|посылк(?:а|и)|покупк(?:а|и))\\\\s+на\\\\s+выдачу',\n",
+       "  '(?i)(?:оформ(?:ить|лю|ите)|сдела(?:ть|ю|йте))\\\\s+выдачу\\\\s+(?:заказа|посылк(?:и|ов)|покупк(?:и|ов))',\n",
+       "  '(?i)(?:забира(?:ю|ем)|получа(?:ю|ем))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))'],\n",
+       " 'min_precision': 0.94,\n",
+       " 'punctuation': ['.', '?']}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordering_intents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['about_pickup_point',\n",
+       " 'get_order',\n",
+       " 'have_more_questions',\n",
+       " 'have_no_more_questions',\n",
+       " 'not_ready_to_get_order',\n",
+       " 'off_topic',\n",
+       " 'order_is_accepted',\n",
+       " 'order_is_not_accepted',\n",
+       " 'query_delay_order',\n",
+       " 'query_order_conditions',\n",
+       " 'query_return_item',\n",
+       " 'query_working_hours',\n",
+       " 'ready_to_get_order']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intent_names = sorted(set(rec[\"name\"] for rec in ordering_intents))\n",
+    "intent_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'about_pickup_point': 0,\n",
+       " 'get_order': 1,\n",
+       " 'have_more_questions': 2,\n",
+       " 'have_no_more_questions': 3,\n",
+       " 'not_ready_to_get_order': 4,\n",
+       " 'off_topic': 5,\n",
+       " 'order_is_accepted': 6,\n",
+       " 'order_is_not_accepted': 7,\n",
+       " 'query_delay_order': 8,\n",
+       " 'query_order_conditions': 9,\n",
+       " 'query_return_item': 10,\n",
+       " 'query_working_hours': 11,\n",
+       " 'ready_to_get_order': 12}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_to_id = {name: i for i, name in enumerate(intent_names)}\n",
+    "name_to_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for intent in ordering_intents:\n",
+    "    intent[\"intent_id\"] = name_to_id[intent[\"name\"]]\n",
+    "    intent[\"intent_name\"] = intent.pop(\"name\")\n",
+    "    intent[\"sample_utterances\"] = []\n",
+    "    intent[\"regexp_full_match\"] = intent.pop(\"phrases\")\n",
+    "    intent[\"regexp_partial_match\"] = intent.pop(\"reg_phrases\")\n",
+    "    intent.pop(\"punctuation\")\n",
+    "    intent.pop(\"min_precision\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'intent_id': 1,\n",
+       " 'intent_name': 'get_order',\n",
+       " 'sample_utterances': [],\n",
+       " 'regexp_full_match': ['(пожалуйста(,){0,1} ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '(пожалуйста(,){0,1} ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '((тебе ((надо)|(следует)|(стоит))|ты (можешь|мог бы|не мог бы)) ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '(сотрудник(,){0,1} ){0,1}(пожалуйста(,){0,1} ){0,1}((получить)|(забрать)|(оформить)|(выдать)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  'было бы хорошо, если бы вы ((выдали)|(оформили)|(подготовили)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '((готов)|(хочу)|(когда можно)|(как)) ((получить)|(забрать)|(оформить)) ((мой)|(свой)) ((заказ)|(посылку)|(покупку))',\n",
+       "  '((заказ)|(посылка)|(покупка)) на выдачу',\n",
+       "  '((оформить)|(сделать)) выдачу ((заказа)|(посылки)|(покупки))',\n",
+       "  '((забираю)|(получаю)) ((заказ)|(посылку)|(покупку))'],\n",
+       " 'regexp_partial_match': ['(?i)(?:пожалуйста,?\\\\s*)?(?:сотрудник,?\\\\s*)?(?:(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите)|выд(?:ать|айте))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и)))(?:,?\\\\s*если\\\\s+можно)?',\n",
+       "  '(?i)(?:(?:не\\\\s+)?мог(?:\\\\s+бы)?\\\\s+(?:ли\\\\s+)?(?:я|вы)|(?:я\\\\s+)?(?:не\\\\s+)?мо(?:гу|г(?:ла|ли)\\\\s+бы)|можно\\\\s+(?:ли|мне))\\\\s+(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите)|выд(?:ать|айте))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:мне\\\\s+(?:надо|следует|стоит|нужно)|необходимо|требуется)\\\\s+(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите)|выд(?:ать|айте))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:хорошо\\\\s+бы|было\\\\s+бы\\\\s+(?:неплохо|здорово|хорошо))(?:,?\\\\s*если\\\\s+бы)?\\\\s+(?:вы\\\\s+)?(?:выдали|оформили|подготовили)\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:гото(?:в|ва)|хоч(?:у|ется)|когда\\\\s+можно|как)\\\\s+(?:получ(?:ить|у|ите)|забр(?:ать|у|ите)|оформ(?:ить|лю|ите))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))',\n",
+       "  '(?i)(?:заказ|посылк(?:а|и)|покупк(?:а|и))\\\\s+на\\\\s+выдачу',\n",
+       "  '(?i)(?:оформ(?:ить|лю|ите)|сдела(?:ть|ю|йте))\\\\s+выдачу\\\\s+(?:заказа|посылк(?:и|ов)|покупк(?:и|ов))',\n",
+       "  '(?i)(?:забира(?:ю|ем)|получа(?:ю|ем))\\\\s+(?:мо(?:й|ю)|сво(?:й|ю))?\\\\s*(?:заказ|посылк(?:у|и)|покупк(?:у|и))']}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordering_intents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(ordering_intents, open('../data/intent_records/ac_ordering.json', 'w'), indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "теперь надо сделать мердж двух датасетов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autopilot_intents = json.load(open(\"../data/intent_records/ac_robotic_new.json\"))\n",
+    "ordering_intents = json.load(open(\"../data/intent_records/ac_ordering.json\"))\n",
+    "\n",
+    "merged_intents = autopilot_intents + ordering_intents\n",
+    "len(merged_intents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['GO',\n",
+       " 'about_pickup_point',\n",
+       " 'disable_autopilot',\n",
+       " 'drop',\n",
+       " 'enable_autopilot',\n",
+       " 'get_order',\n",
+       " 'go_to',\n",
+       " 'have_more_questions',\n",
+       " 'have_no_more_questions',\n",
+       " 'move_backward',\n",
+       " 'move_forward',\n",
+       " 'not_ready_to_get_order',\n",
+       " 'off_topic',\n",
+       " 'order_is_accepted',\n",
+       " 'order_is_not_accepted',\n",
+       " 'pick_up',\n",
+       " 'place',\n",
+       " 'query_delay_order',\n",
+       " 'query_order_conditions',\n",
+       " 'query_return_item',\n",
+       " 'query_working_hours',\n",
+       " 'ready_to_get_order',\n",
+       " 'say',\n",
+       " 'set_point',\n",
+       " 'sit_down',\n",
+       " 'stand_up',\n",
+       " 'status',\n",
+       " 'stop',\n",
+       " 'turn_left',\n",
+       " 'turn_right',\n",
+       " 'world_state']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intent_names = sorted(set(rec[\"intent_name\"] for rec in merged_intents))\n",
+    "intent_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'GO': 0,\n",
+       " 'about_pickup_point': 1,\n",
+       " 'disable_autopilot': 2,\n",
+       " 'drop': 3,\n",
+       " 'enable_autopilot': 4,\n",
+       " 'get_order': 5,\n",
+       " 'go_to': 6,\n",
+       " 'have_more_questions': 7,\n",
+       " 'have_no_more_questions': 8,\n",
+       " 'move_backward': 9,\n",
+       " 'move_forward': 10,\n",
+       " 'not_ready_to_get_order': 11,\n",
+       " 'off_topic': 12,\n",
+       " 'order_is_accepted': 13,\n",
+       " 'order_is_not_accepted': 14,\n",
+       " 'pick_up': 15,\n",
+       " 'place': 16,\n",
+       " 'query_delay_order': 17,\n",
+       " 'query_order_conditions': 18,\n",
+       " 'query_return_item': 19,\n",
+       " 'query_working_hours': 20,\n",
+       " 'ready_to_get_order': 21,\n",
+       " 'say': 22,\n",
+       " 'set_point': 23,\n",
+       " 'sit_down': 24,\n",
+       " 'stand_up': 25,\n",
+       " 'status': 26,\n",
+       " 'stop': 27,\n",
+       " 'turn_left': 28,\n",
+       " 'turn_right': 29,\n",
+       " 'world_state': 30}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_to_id = {name: i for i, name in enumerate(intent_names)}\n",
+    "name_to_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for intent in merged_intents:\n",
+    "    intent[\"intent_id\"] = name_to_id[intent[\"intent_name\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tags': ['movement_direction'],\n",
+       " 'intent_id': 10,\n",
+       " 'intent_name': 'move_forward',\n",
+       " 'sample_utterances': [],\n",
+       " 'regexp_full_match': ['(пожалуйста(,){0,1} ){0,1}((проедь)|(проезжай)|(едь)|(езжай)|(двигайся)|(подвинься)|(продвигайся)|(отъедь)|(отъезжай)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((2)|(три)|(17)|(десять)){0,1}( метров){0,1}',\n",
+       "  '(пожалуйста(,){0,1} ){0,1}((проедь)|(проезжай)|(едь)|(езжай)|(двигайся)|(подвинься)|(продвигайся)|(отъедь)|(отъезжай)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((10)|(десять)){0,1}( метров){0,1}(, если можешь){0,1}',\n",
+       "  '((тебе ((надо)|(следует)|(стоит))|ты (можешь|мог бы|не мог бы)) ){0,1}((проехать)|(отъехать)|(доехать)|(продвинуться)|(подвинуться)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((6)|(пять)){0,1}( метров){0,1}',\n",
+       "  '(робот(,){0,1} ){0,1}(пожалуйста(,){0,1} ){0,1}((проедь)|(проезжай)|(едь)|(езжай)|(двигайся)|(подвинься)|(продвигайся)) (на ){0,1}((7)|(четыре)|(11)|(двенадцать)){0,1}( метров){0,1}',\n",
+       "  'было бы хорошо, если бы ты ((проехал)|(продвинулся)|(подвинулся)|(отъехал)) ((вперёд)|(вперед)|(по прямой)|(прямо)) (на ){0,1}((20)|(семь)|(11)|(одиннадцать)){0,1}( метров){0,1}'],\n",
+       " 'regexp_partial_match': ['(?i)(?:пожалуйста,?\\\\s*)?(?:робот,?\\\\s*)?(?:(?:про|по)?ед(?:ь(?:те)?|у)|(?:про|по)?езжай(?:те)?|двигай(?:ся|тесь)|(?:про|под)вин(?:ь(?:ся|тесь)|усь)|отъ?езжай(?:те)?)\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?(?:,?\\\\s*если\\\\s+можешь)?',\n",
+       "  '(?i)(?:(?:не\\\\s+)?мог(?:\\\\s+бы)?\\\\s+(?:ли\\\\s+)?(?:ты|вы)|(?:ты\\\\s+)?(?:не\\\\s+)?мо(?:жешь|г(?:ла|ли)\\\\s+бы)|способен\\\\s+ли\\\\s+ты)\\\\s+(?:про|по)?ехать\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?',\n",
+       "  '(?i)(?:тебе\\\\s+(?:надо|следует|стоит)|нужно|необходимо|требуется|следует)\\\\s+(?:про|по)?ехать\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?',\n",
+       "  '(?i)(?:хорошо\\\\s+бы|было\\\\s+бы\\\\s+(?:неплохо|здорово|хорошо))(?:,?\\\\s*если\\\\s+бы)?\\\\s+(?:ты\\\\s+)?(?:про|по|под)?(?:ехал(?:а)?|двинул(?:ся|ась))\\\\s+(?:вперёд|вперед|прямо|по\\\\s+прямой)(?:\\\\s+на\\\\s+(?:\\\\d+|[а-я]+)\\\\s*(?:метр(?:ов|а)?|м\\\\.?|шаг(?:ов|а)?))?']}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_intents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(merged_intents, open('../data/intent_records/ac_merged.json', 'w'), indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
