feat/add_github_action: sav fixes

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -734,7 +734,7 @@
     "    ]\n",
     "\n",
     "    for b77_batch in banking77_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, intent_id in zip(b77_batch[\"text\"], b77_batch[\"label\"]):\n",
+    "        for txt, intent_id in zip(b77_batch[\"text\"], b77_batch[\"label\"], strict=False):\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
     "                continue\n",
@@ -1138,7 +1138,7 @@
     "    intent_names = sorted(clinc150_train.unique(\"labels\"))\n",
     "    oos_intent_id = intent_names.index(oos_intent_name)\n",
     "    intent_names = intent_names[:oos_intent_id] + intent_names[oos_intent_id + 1 :] + [intent_names[oos_intent_id]]\n",
-    "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
+    "    name_to_id = dict(zip(intent_names, range(len(intent_names)), strict=False))\n",
     "    name_to_id[oos_intent_name] = -1\n",
     "\n",
     "    res = [\n",
@@ -1153,7 +1153,7 @@
     "    ]\n",
     "\n",
     "    for batch in clinc150_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, name in zip(batch[\"data\"], batch[\"labels\"]):\n",
+    "        for txt, name in zip(batch[\"data\"], batch[\"labels\"], strict=False):\n",
     "            intent_id = name_to_id[name]\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if name != oos_intent_name and len(target_list) >= shots_per_intent:\n",
@@ -1578,7 +1578,7 @@
     "    ]\n",
     "\n",
     "    for batch in in_domain_samples.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, intent_id in zip(batch[\"text\"], batch[\"intent\"]):\n",
+    "        for txt, intent_id in zip(batch[\"text\"], batch[\"intent\"], strict=False):\n",
     "            intent_id -= int(intent_id > ood_index)\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
@@ -2098,7 +2098,7 @@
    "source": [
     "def convert_snips(snips_train, shots_per_intent):\n",
     "    intent_names = sorted(snips_train.unique(\"category\"))\n",
-    "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
+    "    name_to_id = dict(zip(intent_names, range(len(intent_names)), strict=False))\n",
     "\n",
     "    res = [\n",
     "        {\n",
@@ -2112,7 +2112,7 @@
     "    ]\n",
     "\n",
     "    for batch in snips_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, name in zip(batch[\"text\"], batch[\"category\"]):\n",
+    "        for txt, name in zip(batch[\"text\"], batch[\"category\"], strict=False):\n",
     "            intent_id = name_to_id[name]\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
@@ -2244,7 +2244,7 @@
    "source": [
     "def convert_rusnips(snips_train, shots_per_intent):\n",
     "    intent_names = sorted(snips_train.unique(\"intent\"))\n",
-    "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
+    "    name_to_id = dict(zip(intent_names, range(len(intent_names)), strict=False))\n",
     "\n",
     "    res = [\n",
     "        {\n",
@@ -2258,7 +2258,7 @@
     "    ]\n",
     "\n",
     "    for batch in snips_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, name in zip(batch[\"text\"], batch[\"intent\"]):\n",
+    "        for txt, name in zip(batch[\"text\"], batch[\"intent\"], strict=False):\n",
     "            intent_id = name_to_id[name]\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
@@ -2390,7 +2390,7 @@
    "source": [
     "def convert_hwu64(hwu_utterances, hwu_labels, shots_per_intent):\n",
     "    intent_names = sorted(set(hwu_labels))\n",
-    "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
+    "    name_to_id = dict(zip(intent_names, range(len(intent_names)), strict=False))\n",
     "\n",
     "    res = [\n",
     "        {\n",
@@ -2403,7 +2403,7 @@
     "        for i, name in enumerate(intent_names)\n",
     "    ]\n",
     "\n",
-    "    for txt, name in zip(hwu_utterances, hwu_labels):\n",
+    "    for txt, name in zip(hwu_utterances, hwu_labels, strict=False):\n",
     "        intent_id = name_to_id[name]\n",
     "        target_list = res[intent_id][\"sample_utterances\"]\n",
     "        if len(target_list) >= shots_per_intent:\n",
@@ -2535,7 +2535,7 @@
    "source": [
     "def convert_ruhwu64(hwu64_train, shots_per_intent):\n",
     "    intent_names = sorted(hwu64_train.unique(\"intent\"))\n",
-    "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
+    "    name_to_id = dict(zip(intent_names, range(len(intent_names)), strict=False))\n",
     "\n",
     "    res = [\n",
     "        {\n",
@@ -2549,7 +2549,7 @@
     "    ]\n",
     "\n",
     "    for batch in hwu64_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, name in zip(batch[\"text\"], batch[\"intent\"]):\n",
+    "        for txt, name in zip(batch[\"text\"], batch[\"intent\"], strict=False):\n",
     "            intent_id = name_to_id[name]\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
@@ -2693,7 +2693,7 @@
     "    ]\n",
     "\n",
     "    for batch in minds14_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, intent_id in zip(batch[\"transcription\"], batch[\"intent_class\"]):\n",
+    "        for txt, intent_id in zip(batch[\"transcription\"], batch[\"intent_class\"], strict=False):\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
     "                continue\n",
@@ -2774,7 +2774,7 @@
     "    ]\n",
     "\n",
     "    for batch in minds14_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, intent_id in zip(batch[\"english_transcription\"], batch[\"intent_class\"]):\n",
+    "        for txt, intent_id in zip(batch[\"english_transcription\"], batch[\"intent_class\"], strict=False):\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
     "                continue\n",
@@ -3077,7 +3077,7 @@
    "source": [
     "def convert_massive(massive_train, shots_per_intent):\n",
     "    intent_names = sorted(massive_train.unique(\"label\"))\n",
-    "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
+    "    name_to_id = dict(zip(intent_names, range(len(intent_names)), strict=False))\n",
     "\n",
     "    res = [\n",
     "        {\n",
@@ -3091,7 +3091,7 @@
     "    ]\n",
     "\n",
     "    for batch in massive_train.iter(batch_size=16, drop_last_batch=False):\n",
-    "        for txt, name in zip(batch[\"text\"], batch[\"label\"]):\n",
+    "        for txt, name in zip(batch[\"text\"], batch[\"label\"], strict=False):\n",
     "            intent_id = name_to_id[name]\n",
     "            target_list = res[intent_id][\"sample_utterances\"]\n",
     "            if len(target_list) >= shots_per_intent:\n",
@@ -5105,7 +5105,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open(\"../data/robotics_val.csv\", mode=\"r\", newline=\"\") as file:\n",
+    "with open(\"../data/robotics_val.csv\", newline=\"\") as file:\n",
     "    csv_reader = csv.DictReader(file)\n",
     "    robotics_val = list(csv_reader)"
    ]
@@ -5417,12 +5417,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import difflib\n",
+    "import json\n",
     "\n",
     "\n",
     "def read_json_file(file_path):\n",
-    "    with open(file_path, \"r\") as file:\n",
+    "    with open(file_path) as file:\n",
     "        return json.load(file)\n",
     "\n",
     "\n",
