feat/add_github_action: un-save fixes

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -67,13 +67,13 @@
     "def convert_dream(dream_dict):\n",
     "    res = []\n",
     "    for i, (intent_name, all_phrases) in enumerate(dream_dict[\"intent_phrases\"].items()):\n",
-    "        intent_record = dict(\n",
-    "            intent_id=i,\n",
-    "            intent_name=intent_name,\n",
-    "            sample_utterances=[],\n",
-    "            regexp_full_match=all_phrases[\"phrases\"],\n",
-    "            regexp_partial_match=all_phrases[\"reg_phrases\"] if \"reg_phrases\" in all_phrases else [],\n",
-    "        )\n",
+    "        intent_record = {\n",
+    "            \"intent_id\": i,\n",
+    "            \"intent_name\": intent_name,\n",
+    "            \"sample_utterances\": [],\n",
+    "            \"regexp_full_match\": all_phrases[\"phrases\"],\n",
+    "            \"regexp_partial_match\": all_phrases.get(\"reg_phrases\", []),\n",
+    "        }\n",
     "        res.append(intent_record)\n",
     "    return res"
    ]
@@ -838,7 +838,7 @@
     "    res = []\n",
     "    for rec in intent_records:\n",
     "        for utt in rec[\"sample_utterances\"]:\n",
-    "            res.append(dict(intent_id=rec[\"intent_id\"], intent_name=rec[\"intent_name\"], utterance=utt))\n",
+    "            res.append({\"intent_id\": rec[\"intent_id\"], \"intent_name\": rec[\"intent_name\"], \"utterance\": utt})\n",
     "    return res"
    ]
   },
@@ -1072,7 +1072,6 @@
    ],
    "source": [
     "intent_names = sorted(clinc150[\"train\"].unique(\"labels\"))\n",
-    "print(len(intent_names))\n",
     "intent_names[:5]"
    ]
   },
@@ -1125,7 +1124,7 @@
     "for name in intent_names:\n",
     "    samples = clinc150[\"train\"].filter(lambda x: x[\"labels\"] == name)\n",
     "    if len(samples) > 100:\n",
-    "        print(name)"
+    "        pass"
    ]
   },
   {
@@ -1522,8 +1521,7 @@
     }
    ],
    "source": [
-    "intent_labels = sorted(ruclinc150[\"train\"].unique(\"intent\"))\n",
-    "print(len(intent_labels))"
+    "intent_labels = sorted(ruclinc150[\"train\"].unique(\"intent\"))"
    ]
   },
   {
@@ -1550,7 +1548,7 @@
     "for i in intent_labels:\n",
     "    samples = ruclinc150[\"train\"].filter(lambda x: x[\"intent\"] == i)\n",
     "    if len(samples) > 100:\n",
-    "        print(i)"
+    "        pass"
    ]
   },
   {
@@ -2086,7 +2084,6 @@
    ],
    "source": [
     "intent_names = sorted(snips[\"train\"].unique(\"category\"))\n",
-    "print(len(intent_names))\n",
     "intent_names"
    ]
   },
@@ -2325,7 +2322,6 @@
    ],
    "source": [
     "hwu64_labels = open(\"../data/hwu_assets/label.txt\").read().split(\"\\n\")[:-1]\n",
-    "print(len(hwu64_labels))\n",
     "hwu64_labels[:5]"
    ]
   },
@@ -2358,7 +2354,6 @@
    ],
    "source": [
     "hwu64_utterances = open(\"../data/hwu_assets/seq.in\").read().split(\"\\n\")[:-1]\n",
-    "print(len(hwu64_utterances))\n",
     "hwu64_utterances[:5]"
    ]
   },
@@ -2523,7 +2518,6 @@
    ],
    "source": [
     "intent_names = sorted(set(ruhwu64[\"train\"].unique(\"intent\")))\n",
-    "print(len(intent_names))\n",
     "intent_names[:5]"
    ]
   },
@@ -3065,7 +3059,6 @@
    ],
    "source": [
     "intent_names = sorted(massive[\"train\"].unique(\"label\"))\n",
-    "print(len(intent_names))\n",
     "intent_names[:5]"
    ]
   },
@@ -3613,7 +3606,7 @@
     }
    ],
    "source": [
-    "intent_names = sorted(set(record[\"name\"] for record in robotic_intents))\n",
+    "intent_names = sorted({record[\"name\"] for record in robotic_intents})\n",
     "intent_names"
    ]
   },
@@ -3778,7 +3771,7 @@
     }
    ],
    "source": [
-    "intent_names = sorted(set(record[\"name\"] for record in robotic_intents))\n",
+    "intent_names = sorted({record[\"name\"] for record in robotic_intents})\n",
     "intent_names"
    ]
   },
@@ -4093,10 +4086,10 @@
    ],
    "source": [
     "def transform(example: dict):\n",
-    "    return dict(\n",
-    "        utterance=example[\"transcript\"],\n",
-    "        labels=[name_to_id[intent_name] for intent_name in example[\"intent\"] if intent_name != \"reqmore\"],\n",
-    "    )\n",
+    "    return {\n",
+    "        \"utterance\": example[\"transcript\"],\n",
+    "        \"labels\": [name_to_id[intent_name] for intent_name in example[\"intent\"] if intent_name != \"reqmore\"],\n",
+    "    }\n",
     "\n",
     "\n",
     "multilabel_dstc = dstc3[\"test\"].map(transform, remove_columns=dstc3[\"test\"].features.keys())"
@@ -4393,10 +4386,10 @@
    ],
    "source": [
     "def transform(example: dict):\n",
-    "    return dict(\n",
-    "        utterance=example[\"content\"],\n",
-    "        labels=[name_to_id[intent_name] for intent_name in example[\"all_labels\"] if intent_name not in names_to_remove],\n",
-    "    )\n",
+    "    return {\n",
+    "        \"utterance\": example[\"content\"],\n",
+    "        \"labels\": [name_to_id[intent_name] for intent_name in example[\"all_labels\"] if intent_name not in names_to_remove],\n",
+    "    }\n",
     "\n",
     "\n",
     "multilabel_events_dataset = events_dataset[\"train\"].map(\n",
@@ -4786,10 +4779,10 @@
    ],
    "source": [
     "def transform(example: dict):\n",
-    "    return dict(\n",
-    "        utterance=example[\"text\"],\n",
-    "        labels=[name_to_id[intent_name] for intent_name in example[\"topics\"] if intent_name not in names_to_remove],\n",
-    "    )\n",
+    "    return {\n",
+    "        \"utterance\": example[\"text\"],\n",
+    "        \"labels\": [name_to_id[intent_name] for intent_name in example[\"topics\"] if intent_name not in names_to_remove],\n",
+    "    }\n",
     "\n",
     "\n",
     "multilabel_reuters = reuters[\"train\"].map(transform, remove_columns=reuters[\"train\"].features.keys())\n",
@@ -4982,7 +4975,7 @@
    ],
    "source": [
     "def transform(example: dict):\n",
-    "    return dict(utterance=example[\"text\"], labels=example[\"labels\"])\n",
+    "    return {\"utterance\": example[\"text\"], \"labels\": example[\"labels\"]}\n",
     "\n",
     "\n",
     "multilabel_eurlex = eurlex[\"train\"].map(transform, remove_columns=eurlex[\"train\"].features.keys())\n",
@@ -5291,7 +5284,7 @@
    "source": [
     "for rec in robotics_val:\n",
     "    if \"undefined\" in rec[\"intents_splitted\"]:\n",
-    "        print(rec)"
+    "        pass"
    ]
   },
   {
@@ -5447,8 +5440,8 @@
     "    diff = difflib.unified_diff(json1_lines, json2_lines, fromfile=file1_path, tofile=file2_path)\n",
     "\n",
     "    # Print the differences\n",
-    "    for line in diff:\n",
-    "        print(line)"
+    "    for _line in diff:\n",
+    "        pass"
    ]
   },
   {
@@ -5563,7 +5556,7 @@
     }
    ],
    "source": [
-    "intent_names = sorted(set(rec[\"name\"] for rec in ordering_intents))\n",
+    "intent_names = sorted({rec[\"name\"] for rec in ordering_intents})\n",
     "intent_names"
    ]
   },
@@ -5742,7 +5735,7 @@
     }
    ],
    "source": [
-    "intent_names = sorted(set(rec[\"intent_name\"] for rec in merged_intents))\n",
+    "intent_names = sorted({rec[\"intent_name\"] for rec in merged_intents})\n",
     "intent_names"
    ]
   },
