--- a/experiments/minimal-run-test/data-creation.ipynb
+++ b/experiments/minimal-run-test/data-creation.ipynb
@@ -18,8 +18,7 @@
     "\n",
     "path = \"/home/alekseev/AutoIntent/data/intent_records/clinc150.json\"\n",
     "with open(path) as file:\n",
-    "    full_dataset = json.load(file)\n",
-    "print(len(full_dataset))"
+    "    full_dataset = json.load(file)"
    ]
   },
   {
