--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -4388,7 +4388,9 @@
     "def transform(example: dict):\n",
     "    return {\n",
     "        \"utterance\": example[\"content\"],\n",
-    "        \"labels\": [name_to_id[intent_name] for intent_name in example[\"all_labels\"] if intent_name not in names_to_remove],\n",
+    "        \"labels\": [\n",
+    "            name_to_id[intent_name] for intent_name in example[\"all_labels\"] if intent_name not in names_to_remove\n",
+    "        ],\n",
     "    }\n",
     "\n",
     "\n",
