workaround for union of containers in omegaconf

--- a/experiments/hydra-configs/optimization-nodes.ipynb
+++ b/experiments/hydra-configs/optimization-nodes.ipynb
@@ -311,23 +311,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'module_type': 'tunable'},\n",
-       " {'module_type': 'argmax'},\n",
-       " {'module_type': 'jinoos'}]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "search_space.pop(0)\n",
-    "search_space"
+    "# search_space.pop(0)\n",
+    "# search_space"
    ]
   },
   {
@@ -361,7 +348,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-10-08 12:41:55,032] A new study created in memory with name: no-name-d6c41bce-e8f8-44d8-a446-527f18a8f418\n",
+      "[I 2024-10-08 13:06:35,571] A new study created in memory with name: no-name-6d5a7799-b8ce-4132-8205-773a90700296\n",
       "Your data contains out-of-scope utterances, but ArgmaxPredictor cannot detect them. Consider different predictor\n"
      ]
     }
