add search space validation

--- a/experiments/hydra-configs/optimization-nodes.ipynb
+++ b/experiments/hydra-configs/optimization-nodes.ipynb
@@ -140,7 +140,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/voorhs/.cache/pypoetry/virtualenvs/autointent-D7M6VOhJ-py3.12/lib/python3.12/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in VectorDBConfigSearchSpace has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from autointent.nodes.optimization import NodeOptimizer\n",
     "\n",
@@ -200,7 +211,18 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/voorhs/.cache/pypoetry/virtualenvs/autointent-D7M6VOhJ-py3.12/lib/python3.12/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in DNNCScorerConfigSearchSpace has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "scoring_optimizer: NodeOptimizer = instantiate(scoring_optimizer_config)"
    ]
@@ -332,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-10-08 13:06:35,571] A new study created in memory with name: no-name-6d5a7799-b8ce-4132-8205-773a90700296\n",
+      "[I 2024-10-08 18:14:30,410] A new study created in memory with name: no-name-9eff92db-b1ae-4bdb-912e-b4ec33eb76c5\n",
       "Your data contains out-of-scope utterances, but ArgmaxPredictor cannot detect them. Consider different predictor\n"
      ]
     }
@@ -356,13 +378,6 @@
    "source": [
     "prediction_optimizer.fit(context)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
